Fixed Modal UI component z-index

--- a/site/src/ui/Modal/styles.module.css
+++ b/site/src/ui/Modal/styles.module.css
@@ -7,6 +7,10 @@
     height: 100%
 }
 
+.container > * {
+    z-index: 5
+}
+
 .modal {
     position: absolute;
     left: 50%;
